# canned

./: README.md
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0c78044c764a_add_local_completion_tracking_to_.py  2ebe23af7cdd_remove_is_completed_column_from_courses_.py  39f48d045353_added_courses_table.py  5aa3d0e1dab1_add_is_active_column_to_user_courses.py  6c7e12ea7e0e_add_course_name_to_user_assignments.py  702a45e290a5_add_graded_column_to_user_assignments_.py  9055e6a286df_add_assignments_and_submissions_tables_.py  9f6fa8d71b57_first_migration.py  cfdff14de535_simplified_schema.py  e833f8b39e29_add_is_subscribed_column_to_user_courses.py
backend/src/: .env.example  auth.py  config.py  database.py  session.py
backend/src/api/: server.py
backend/src/api/routers/: assignments.py  canvas.py  courses.py  subscriptions.py
backend/src/models/: assignment.py  course.py  subscription.py  user.py
backend/src/services/: canvas_sync.py
backend/src/utils/: canvas.py  text.py
frontend/: package.json
frontend/docs/: authentication.md
frontend/src/: global.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/assignments/: page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/preferences/: page.tsx
frontend/src/components/: mode-toggle.tsx  theme-provider.tsx
frontend/src/lib/: config.ts
frontend/src/types/: types.ts
(+23 files in other folders)
