[project]
name = "canned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.2",
    "html2text>=2025.4.15",
    "psycopg>=3.2.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
